5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1573_1559.log
== SUBMITION (2019-03-13 14:11:54) 
-- CODE:
frase = ""
print.upper(frase.Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME:
0.246845
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print.upper(frase.Ada Lovelace foi a primeira programadora da historia)
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:12:21) 
-- CODE:
frase = ""
print.upper(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME:
0.130228
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print.upper(Ada Lovelace foi a primeira programadora da historia)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:12:23) 
-- CODE:
frase = ""
print.upper(Ada Lovelace foi a primeira programadora da historia)
-- ERROR:
File "XXXX", line 2
    print.upper(Ada Lovelace foi a primeira programadora da historia)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:12:43) 
-- CODE:
frase = ""
print(Ada Lovelace foi a primeira programadora da historia) upper
-- EXECUTION TIME:
0.190003
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia) upper
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:12:43) 
-- CODE:
frase = ""
print(Ada Lovelace foi a primeira programadora da historia) upper
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia) upper
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:12:55) 
-- CODE:
frase = ""
print.upper (Ada Lovelace foi a primeira programadora da historia) 
-- EXECUTION TIME:
0.166809
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print.upper (Ada Lovelace foi a primeira programadora da historia) 
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:12:56) 
-- CODE:
frase = ""
print.upper (Ada Lovelace foi a primeira programadora da historia) 
-- ERROR:
File "XXXX", line 2
    print.upper (Ada Lovelace foi a primeira programadora da historia) 
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:12:57) 
-- CODE:
frase = ""
print.upper (Ada Lovelace foi a primeira programadora da historia) 
-- EXECUTION TIME:
0.143143
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print.upper (Ada Lovelace foi a primeira programadora da historia) 
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:13:03) 
-- CODE:
frase = ""
print.upper ( Ada Lovelace foi a primeira programadora da historia) 
-- EXECUTION TIME:
0.214449
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print.upper ( Ada Lovelace foi a primeira programadora da historia) 
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:13:04) 
-- CODE:
frase = ""
print.upper ( Ada Lovelace foi a primeira programadora da historia) 
-- ERROR:
File "XXXX", line 2
    print.upper ( Ada Lovelace foi a primeira programadora da historia) 
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:13:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print.upper
-- EXECUTION TIME:
0.145082
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1559/main.py", line 2, in <module>
    print.upper
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:13:25) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print.upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f429775b9f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:17:03) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- EXECUTION TIME:
0.215054
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f01ce6bb4a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper)
-- ERROR:
File "XXXX", line 2
    print(frase..upper)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:17:13) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper)
-- EXECUTION TIME:
0.141747
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(frase..upper)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:46) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.(upper))
-- ERROR:
File "XXXX", line 2
    print(frase.(upper))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:17:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.(upper))
-- EXECUTION TIME:
0.135388
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(frase.(upper))
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:53) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.(upper)
-- ERROR:
File "XXXX", line 2
    print(frase.(upper)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:06) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper))
-- ERROR:
File "XXXX", line 2
    print(frase.upper))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:18:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper))
-- EXECUTION TIME:
0.156035
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(frase.upper))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper))
-- ERROR:
File "XXXX", line 2
    print(frase.upper))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:28) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper()))
-- ERROR:
File "XXXX", line 2
    print(frase.upper()))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:18:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.169755
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
